Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/InvalidComment.ru
/? simbolo invalido en comentario °